# christmalt

./: docker-compose.yml
app/: Dockerfile  christmalt.cabal  stack.yaml
app/christmalt/: README.md  bower.json  christmalt.cabal  package.json  stack.yaml
app/christmalt/src/: BeerDatabase.purs  Main.hs  Main.purs
app/christmalt_cabal/: ChangeLog.md  christmalt-cabal.cabal
app/christmalt_cabal/src/: Main.hs
app/src/: Main.hs
flyway/: Dockerfile  flyway.conf
flyway/sql/: V1__PopulateBeers.sql
postgres/: Dockerfile
postgres/init/: SetupDatabase.sql
