name:                christmalt
version:             0.1.0.0
synopsis:            Random beer-by-SMS for the 2016 Advent Calendar
license-file:        UNLICENSE
author:              Ben Barnes
maintainer:          ben.w.barnes@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable christmalt
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , HDBC
                     , HDBC-postgresql
                     , http-client
                     , mtl
                     , servant == 0.9.1.1
                     , servant-client == 0.9.1.1
                     , text
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/chronon-io/christmalt
